Converted the BaseViewModel into a SharedDataService that is injected (more MVVM compliant).

--- a/LinkerPlayer/Windows/MainWindow.xaml
+++ b/LinkerPlayer/Windows/MainWindow.xaml
@@ -14,7 +14,7 @@
   AllowsTransparency="False"
   BorderBrush="{DynamicResource MainWindowBorderBrush}"
   BorderThickness="1"
-  Closing="Window_Closing"
+  Closing="OnMainWindowClose"
   CornerPreference="DoNotRound"
   GlassFrameThickness="0"
   Icon="/Images/app64.ico"
