--- a/LinkerPlayer/App.xaml
+++ b/LinkerPlayer/App.xaml
@@ -1,9 +1,7 @@
 ﻿<Application
   x:Class="LinkerPlayer.App"
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-  xmlns:local="clr-namespace:LinkerPlayer"
-  xmlns:system="clr-namespace:System;assembly=System.Runtime">
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <Application.Resources>
     <ResourceDictionary>
       <ResourceDictionary.MergedDictionaries>
