Made a lot of changes: StatusBar is working now. Beefed up Sqlite. Needed to fix some nagging issues which added a lot of logging throughout. Next will be some cleanup.

--- a/LinkerPlayer/UserControls/PlayerControls.xaml
+++ b/LinkerPlayer/UserControls/PlayerControls.xaml
@@ -352,7 +352,7 @@
             Grid.Column="2"
             Width="Auto"
             Margin="5,0"
-            HorizontalAlignment="Right"
+            HorizontalAlignment="Center"
             VerticalAlignment="Center"
             FontSize="13"
             FontWeight="Light" />
