--- a/LinkerPlayer/UserControls/PlaylistTabs.xaml
+++ b/LinkerPlayer/UserControls/PlaylistTabs.xaml
@@ -483,7 +483,7 @@
                       Margin="5,0,5,0"
                       HorizontalAlignment="Right"
                       d:DataContext="{d:DesignData MediaFile}"
-                      Text="{Binding Duration, Converter={StaticResource DurationConverter}}" />
+                      Text="{Binding Duration, Converter={StaticResource DurationConverter}, FallbackValue=Loading...}" />
                   </DataTemplate>
                 </DataGridTemplateColumn.CellTemplate>
               </DataGridTemplateColumn>
