--- a/LinkerPlayer/UserControls/TrackInfo.xaml
+++ b/LinkerPlayer/UserControls/TrackInfo.xaml
@@ -1,16 +1,20 @@
 ﻿<UserControl
-  x:Class="LinkerPlayer.UserControls.TrackInfo"
-  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-  xmlns:audio="clr-namespace:LinkerPlayer.Audio"
-  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-  d:DesignHeight="450"
-  d:DesignWidth="250"
-  FontFamily="Segoe UI"
-  FontWeight="Light"
-  mc:Ignorable="d">
-
+    x:Class="LinkerPlayer.UserControls.TrackInfo"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:audio="clr-namespace:LinkerPlayer.Audio"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:converters="clr-namespace:LinkerPlayer.Converters"
+    d:DesignHeight="450"
+    d:DesignWidth="250"
+    FontFamily="Segoe UI"
+    FontWeight="Light"
+    mc:Ignorable="d">
+  <UserControl.Resources>
+    <BitmapImage x:Key="DefaultAlbumImage" UriSource="pack://application:,,,/LinkerPlayer;component/Images/reel.png"/>
+    <converters:NullToTextConverter x:Key="NullToTextConverter"/>
+  </UserControl.Resources>
   <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
     <Grid.RowDefinitions>
       <RowDefinition Height="Auto" />
@@ -18,25 +22,23 @@
       <RowDefinition />
     </Grid.RowDefinitions>
 
-    <!--  AlbumCover  -->
+    <!-- AlbumCover -->
     <Grid
-      x:Name="CoverGrid"
-      Grid.Row="0"
-      Grid.Column="0"
-      Margin="0,1,0,0"
-      HorizontalAlignment="Stretch"
-      VerticalAlignment="Stretch"
-      d:DesignHeight="250">
+            x:Name="CoverGrid"
+            Grid.Row="0"
+            Margin="0,1,0,0"
+            HorizontalAlignment="Stretch"
+            VerticalAlignment="Stretch"
+            d:DesignHeight="250">
       <Grid
-        x:Name="ImageGrid"
-        RenderOptions.BitmapScalingMode="HighQuality"
-        RenderOptions.EdgeMode="Aliased">
-
+                x:Name="ImageGrid"
+                RenderOptions.BitmapScalingMode="HighQuality"
+                RenderOptions.EdgeMode="Aliased">
         <Image
-          x:Name="TrackImage"
-          HorizontalAlignment="Stretch"
-          VerticalAlignment="Stretch"
-          Source="{Binding DefaultAlbumImage}">
+                    x:Name="TrackImage"
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch"
+                    Source="{Binding SelectedMediaFile.AlbumCover, FallbackValue={StaticResource DefaultAlbumImage}}">
           <Image.Style>
             <Style TargetType="Image">
               <Setter Property="Opacity" Value="1" />
@@ -44,22 +46,20 @@
           </Image.Style>
         </Image>
         <TextBlock
-          x:Name="TrackImageText"
-          Height="auto"
-          HorizontalAlignment="Center"
-          VerticalAlignment="Center"
-          FontSize="20"
-          Text="[ No Selection ]" />
-
+                    x:Name="TrackImageText"
+                    Height="Auto"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    FontSize="20"
+                    Text="{Binding SelectedMediaFile.AlbumCover, Converter={StaticResource NullToTextConverter}, ConverterParameter='[No Image]'}" />
       </Grid>
     </Grid>
 
     <Grid
-      Grid.Row="1"
-      Margin="0,0,0,0"
-      HorizontalAlignment="Stretch"
-      VerticalAlignment="Center">
-
+            Grid.Row="1"
+            Margin="0,0,0,0"
+            HorizontalAlignment="Stretch"
+            VerticalAlignment="Center">
       <Grid.RowDefinitions>
         <RowDefinition Height="Auto" />
         <RowDefinition Height="Auto" />
@@ -71,95 +71,92 @@
       <Border Grid.Row="0" Grid.RowSpan="5" />
 
       <TextBlock
-        Name="TrackName"
-        Grid.Row="0"
-        Grid.ColumnSpan="2"
-        Margin="0,8,0,2"
-        Padding="8,0,0,0"
-        VerticalAlignment="Center"
-        d:Text="Title"
-        FontSize="18"
-        FontWeight="Regular"
-        Foreground="{DynamicResource DefaultTextBrush}"
-        TextTrimming="CharacterEllipsis" />
+                x:Name="TrackName"
+                Grid.Row="0"
+                Grid.ColumnSpan="2"
+                Margin="0,8,0,2"
+                Padding="8,0,0,0"
+                VerticalAlignment="Center"
+                FontSize="18"
+                FontWeight="Regular"
+                Foreground="{DynamicResource DefaultTextBrush}"
+                Text="{Binding SelectedMediaFile.Title, FallbackValue='No Selection'}"
+                TextTrimming="CharacterEllipsis" />
 
       <TextBlock
-        Name="TrackArtist"
-        Grid.Row="1"
-        Margin="0,0,0,0"
-        Padding="8,0,0,0"
-        VerticalAlignment="Center"
-        d:Text="Artist"
-        FontSize="14"
-        FontWeight="Normal"
-        Foreground="{DynamicResource DefaultTextBrush}"
-        TextTrimming="CharacterEllipsis" />
+                x:Name="TrackArtist"
+                Grid.Row="1"
+                Margin="0,0,0,0"
+                Padding="8,0,0,0"
+                VerticalAlignment="Center"
+                FontSize="14"
+                FontWeight="Normal"
+                Foreground="{DynamicResource DefaultTextBrush}"
+                Text="{Binding SelectedMediaFile.Artist, StringFormat='Artist: {0}', FallbackValue='Artist: Unknown'}"
+                TextTrimming="CharacterEllipsis" />
 
       <TextBlock
-        Name="TrackAlbum"
-        Grid.Row="2"
-        Grid.ColumnSpan="2"
-        Margin="0,0,0,0"
-        Padding="8,0,0,0"
-        VerticalAlignment="Center"
-        d:Text="Album"
-        FontSize="12"
-        FontWeight="Normal"
-        Foreground="{DynamicResource DefaultTextBrush}"
-        TextTrimming="CharacterEllipsis" />
+                x:Name="TrackAlbum"
+                Grid.Row="2"
+                Grid.ColumnSpan="2"
+                Margin="0,0,0,0"
+                Padding="8,0,0,0"
+                VerticalAlignment="Center"
+                FontSize="12"
+                FontWeight="Normal"
+                Foreground="{DynamicResource DefaultTextBrush}"
+                Text="{Binding SelectedMediaFile.Album, StringFormat='Album: {0}', FallbackValue='Album: Unknown'}"
+                TextTrimming="CharacterEllipsis" />
 
       <StackPanel Grid.Row="3" Orientation="Horizontal">
         <TextBlock
-          Name="TrackYear"
-          Margin="0,0,10,0"
-          Padding="8,0,0,0"
-          VerticalAlignment="Center"
-          d:Text="Year"
-          FontSize="14"
-          FontWeight="Normal"
-          Foreground="{DynamicResource DefaultTextBrush}"
-          TextTrimming="CharacterEllipsis" />
-
+                    x:Name="TrackYear"
+                    Margin="0,0,10,0"
+                    Padding="8,0,0,0"
+                    VerticalAlignment="Center"
+                    FontSize="14"
+                    FontWeight="Normal"
+                    Foreground="{DynamicResource DefaultTextBrush}"
+                    Text="{Binding SelectedMediaFile.Year, StringFormat='Year: {0}', FallbackValue='Year: Unknown'}"
+                    TextTrimming="CharacterEllipsis" />
         <TextBlock
-          Name="TrackBitrate"
-          Margin="0,0,0,0"
-          Padding="8,0,0,0"
-          VerticalAlignment="Center"
-          d:Text="Year"
-          FontSize="14"
-          FontWeight="Normal"
-          Foreground="{DynamicResource DefaultTextBrush}"
-          TextTrimming="CharacterEllipsis" />
+                    x:Name="TrackBitrate"
+                    Margin="0,0,0,0"
+                    Padding="8,0,0,0"
+                    VerticalAlignment="Center"
+                    FontSize="14"
+                    FontWeight="Normal"
+                    Foreground="{DynamicResource DefaultTextBrush}"
+                    Text="{Binding SelectedMediaFile.Bitrate, StringFormat='Bitrate: {0} kbps', FallbackValue='Bitrate: Unknown'}"
+                    TextTrimming="CharacterEllipsis" />
       </StackPanel>
 
       <TextBlock
-        Name="TrackGenre"
-        Grid.Row="4"
-        Margin="0,0,0,0"
-        Padding="8,0,0,0"
-        VerticalAlignment="Center"
-        d:Text="Genre"
-        FontSize="14"
-        FontWeight="Normal"
-        Foreground="{DynamicResource DefaultTextBrush}"
-        TextTrimming="CharacterEllipsis" />
-
+                x:Name="TrackGenre"
+                Grid.Row="4"
+                Margin="0,0,0,0"
+                Padding="8,0,0,0"
+                VerticalAlignment="Center"
+                FontSize="14"
+                FontWeight="Normal"
+                Foreground="{DynamicResource DefaultTextBrush}"
+                Text="{Binding SelectedMediaFile.Genres, StringFormat='Genres: {0}', FallbackValue='Genres: Unknown'}"
+                TextTrimming="CharacterEllipsis" />
     </Grid>
-    <Grid
-      Grid.Row="2"
-      Margin="8,0,8,0"
-      HorizontalAlignment="Stretch"
-      VerticalAlignment="Stretch">
 
+    <Grid
+            Grid.Row="2"
+            Margin="8,0,8,0"
+            HorizontalAlignment="Stretch"
+            VerticalAlignment="Stretch">
       <audio:SpectrumAnalyzer
-        x:Name="Spectrum"
-        AveragePeaks="False"
-        BarHeightScaling="Decibel"
-        MaximumFrequency="20000"
-        MinimumFrequency="20"
-        PeakFallDelay="10"
-        Style="{StaticResource SpectrumAnalyzerStyle}" />
+                x:Name="Spectrum"
+                AveragePeaks="False"
+                BarHeightScaling="Decibel"
+                MaximumFrequency="20000"
+                MinimumFrequency="20"
+                PeakFallDelay="10"
+                Style="{StaticResource SpectrumAnalyzerStyle}" />
     </Grid>
   </Grid>
-
 </UserControl>
