--- a/LinkerPlayer/UserControls/PlaylistTabs.xaml
+++ b/LinkerPlayer/UserControls/PlaylistTabs.xaml
@@ -2,15 +2,14 @@
   x:Class="LinkerPlayer.UserControls.PlaylistTabs"
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+  xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
   xmlns:converters="clr-namespace:LinkerPlayer.Converters"
   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-
   xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
   xmlns:managedBass="clr-namespace:ManagedBass;assembly=ManagedBass"
   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
   xmlns:models="clr-namespace:LinkerPlayer.Models"
   xmlns:userControls="clr-namespace:LinkerPlayer.UserControls"
-  xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
   d:DesignHeight="80"
   d:DesignWidth="800"
   FontFamily="Segoe UI"
@@ -246,14 +245,14 @@
             VerticalScrollBarVisibility="Visible"
             VirtualizingStackPanel.IsVirtualizing="True"
             VirtualizingStackPanel.VirtualizationMode="Recycling">
-          <b:Interaction.Triggers>
-            <b:EventTrigger EventName="DragOver">
-              <b:InvokeCommandAction Command="{Binding DataContext.DragOverCommand, RelativeSource={RelativeSource AncestorType=UserControl}}" PassEventArgsToCommand="True" />
-            </b:EventTrigger>
-            <b:EventTrigger EventName="Drop">
-              <b:InvokeCommandAction Command="{Binding DataContext.DropCommand, RelativeSource={RelativeSource AncestorType=UserControl}}" PassEventArgsToCommand="True" />
-            </b:EventTrigger>
-          </b:Interaction.Triggers>
+            <b:Interaction.Triggers>
+              <b:EventTrigger EventName="DragOver">
+                <b:InvokeCommandAction Command="{Binding DataContext.DragOverCommand, RelativeSource={RelativeSource AncestorType=UserControl}}" PassEventArgsToCommand="True" />
+              </b:EventTrigger>
+              <b:EventTrigger EventName="Drop">
+                <b:InvokeCommandAction Command="{Binding DataContext.DropCommand, RelativeSource={RelativeSource AncestorType=UserControl}}" PassEventArgsToCommand="True" />
+              </b:EventTrigger>
+            </b:Interaction.Triggers>
             <DataGrid.Resources>
               <ResourceDictionary>
                 <ResourceDictionary.MergedDictionaries>
@@ -454,7 +453,7 @@
                     <TextBlock
                       Margin="5,0,5,0"
                       d:DataContext="{d:DesignData IMediaFile}"
-                      Text="{Binding Artist}"
+                      Text="{Binding Artist, FallbackValue='Unknown Artist'}"
                       ToolTip="{Binding RelativeSource={RelativeSource Self}, Path=Text}" />
                   </DataTemplate>
                 </DataGridTemplateColumn.CellTemplate>
@@ -468,7 +467,7 @@
                     <TextBlock
                       Margin="5,0,5,0"
                       d:DataContext="{d:DesignData IMediaFile}"
-                      Text="{Binding Album}"
+                      Text="{Binding Album, FallbackValue='Unknown Album'}"
                       ToolTip="{Binding RelativeSource={RelativeSource Self}, Path=Text}" />
                   </DataTemplate>
                 </DataGridTemplateColumn.CellTemplate>
