blinker - Refactored SpectrumAnalyzer. Also, created a button to toggle the different ScalingStyles in the Spectrum control. Also refactored MediaFile

--- a/LinkerPlayer/UserControls/PlaylistTabs.xaml
+++ b/LinkerPlayer/UserControls/PlaylistTabs.xaml
@@ -242,6 +242,7 @@
             SelectionMode="Single"
             SelectionUnit="FullRow"
             Sorting="TracksTable_OnSorting"
+            ToolTipService.IsEnabled="False"
             VerticalScrollBarVisibility="Visible"
             VirtualizingStackPanel.IsVirtualizing="True"
             VirtualizingStackPanel.VirtualizationMode="Recycling">
