--- a/LinkerPlayer/Themes/Dark.xaml
+++ b/LinkerPlayer/Themes/Dark.xaml
@@ -70,9 +70,9 @@
   <Color x:Key="ScrollBarArrowBackgroundColor">Transparent</Color>
   <Color x:Key="ScrollBarRepeatButtonColor">Transparent</Color>
 
-  <Color x:Key="SpectrumStartColor">#4F4F4F</Color>
+  <Color x:Key="SpectrumStartColor">#5d5d5d</Color>
   <Color x:Key="SpectrumEndColor">#373737</Color>
-  <Color x:Key="SpectrumPeakColor">#186868</Color>
+  <Color x:Key="SpectrumPeakColor">#29b4b4</Color>
 
   <Color x:Key="SpectrumLineColor">LightSteelBlue</Color>
   <Color x:Key="SpectrumBackgroundColor">#FFFFFF</Color>
