--- a/LinkerPlayer/UserControls/TrackInfo.xaml
+++ b/LinkerPlayer/UserControls/TrackInfo.xaml
@@ -24,14 +24,14 @@
       <RowDefinition />
     </Grid.RowDefinitions>
 
-    <!--  AlbumCover  -->
+    <!-- AlbumCover -->
     <Grid
       x:Name="CoverGrid"
       Grid.Row="0"
       Margin="0,1,0,0"
       HorizontalAlignment="Stretch"
       VerticalAlignment="Stretch"
-      d:DesignHeight="250">
+      MinHeight="250">
       <Grid
         x:Name="ImageGrid"
         RenderOptions.BitmapScalingMode="HighQuality"
@@ -40,7 +40,8 @@
           x:Name="TrackImage"
           HorizontalAlignment="Stretch"
           VerticalAlignment="Stretch"
-          Source="{Binding SelectedMediaFile.AlbumCover, FallbackValue={StaticResource DefaultAlbumImage}}">
+          Source="{Binding SelectedMediaFile.AlbumCover, FallbackValue={StaticResource DefaultAlbumImage}}"
+          Panel.ZIndex="0">
           <Image.Style>
             <Style TargetType="Image">
               <Setter Property="Opacity" Value="1" />
@@ -53,10 +54,13 @@
           HorizontalAlignment="Center"
           VerticalAlignment="Center"
           FontSize="20"
-          Text="{Binding SelectedMediaFile.Album, Converter={StaticResource NullToTextConverter}, ConverterParameter='[No Image]'}" />
+          Foreground="White"
+          Panel.ZIndex="1"
+          Text="{Binding SelectedMediaFile.AlbumCover, Converter={StaticResource NullToTextConverter}, ConverterParameter='[No Image]'}" />
       </Grid>
     </Grid>
 
+    <!-- Rest of the XAML remains unchanged -->
     <Grid
       Grid.Row="1"
       Margin="0,0,0,0"
